--- a/package.json
+++ b/package.json
@@ -30,14 +30,17 @@
   },
   "homepage": "https://github.com/learn-co-curriculum/recursion-lab",
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
     "babel-core": "^6.11.4",
     "babel-preset-es2015": "^6.9.0",
     "expect": "^1.20.2",
+    "gulp-babel": "^8.0.0",
     "jsdom": "^9.0.0",
-    "mocha": "^2.4.5",
-    "mocha-multi": "^0.9.0"
+    "mocha": "^2.5.3",
+    "mocha-multi": "^0.9.1"
   },
   "dependencies": {
-    "sinon": "^2.0.0"
+    "sinon": "^8.1.1"
   }
 }
